style.css
@import url("https://fonts.googleapis.com/css2?family=Fredoka:wght@300..700&family=Roboto+Condensed:ital,wght@0,100..900;1,100..900&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap");
* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
  /* overflow-x: hidden; */
}
body {
  background-color: #191717;
  color: #f5f5f5;
  border-color: #f5f5f5;
  font-family: "Roboto Condensed", sans-serif;
}
.money {
  color: #00008b;
  background-color: #f5f5f5;
  border-color: #00008b;
}
.dark-btn {
  background-color: white;
}

h1 {
  font-family: "Fredoka", sans-serif;
}
#light {
  position: fixed;
}
/* contact section */
.run {
  background-color: #f69916;
  padding: 6px;
  border-radius: 50%;
}

.btn1 {
  border: 2px solid #f69916;
  transition: 2;
  color: #f69916;
  border-radius: 0;
  padding: 8px 16px;
  font-weight: 600;
  transform: scale(1.05);
}
.btn1:hover {
  border: 2px solid #f69916;
  transition: 2;
  transition: ease-in-out;
  border-radius: 10px;
  padding: 4px 12px;
  /* font-weight: 700; */
  transform: scale(1.05);
  background-color: #f69916;
  color: #f5f5f5;
  box-shadow: 0 4px 20px rgba(0, 0, 0, 0.3), 0 2px 8px rgba(255, 255, 255, 0.05);
}
.icon_1 i {
  border: 2px s;
  padding: 2px;
  font-size: 30px;
  box-shadow: 2px 2px 3px 2px rgba(246, 144, 0, 0.5);
}
.icon_2 i {
  /* display: none; */
  border: 2px s;
  border-radius: 50%;
  font-size: 30px;
  box-shadow: 2px 2px 3px 2px rgba(246, 144, 0, 0.5);
}
.icon_2 i:hover {
  background-color: #f69916;
  box-shadow: 0 4px 20px rgba(0, 0, 0, 0.3), 0 2px 8px rgba(255, 255, 255, 0.05);
}
.novate {
  padding: 8px;
  width: 100px;
  border-radius: 20px;
  border: 1px solid #f69916;
}
.icon_1 h3 {
  font-weight: 700;
}
.hero {
  margin: auto;
}
.navbar.scrolled {
  background-color: rgba(0, 0, 0, 0.09);
  box-shadow: 0 4px 20px rgba(0, 0, 0, 0.3), 0 2px 8px rgba(255, 255, 255, 0.05);
}

.features {
  font-size: 30px;
  color: #ff9602;
}
.cooler {
  background-color: rgba(255, 255, 255, 0.07);
  border-radius: 15px;
  box-shadow: 0 4px 20px rgba(0, 0, 0, 0.3), 0 2px 8px rgba(255, 255, 255, 0.05);
}
.cool {
  background-color: rgba(255, 255, 255, 0.07);
  border-radius: 15px;
  box-shadow: 0 4px 20px rgba(0, 0, 0, 0.3), 0 2px 8px rgba(255, 255, 255, 0.05);
  padding: 20px;
}
.cool:hover {
  padding: 15px;
  background-color: rgba(0, 0, 0, 0.07);
  border-radius: 10px;
  box-shadow: 0 4px 10px rgba(225, 225, 225, 0.3),
    0 2px 4px rgba(255, 255, 255, 0.05);
}
.card {
  background-color: rgba(255, 255, 255, 0.07);
  border-radius: 10px;
  box-shadow: 0 4px 20px rgba(0, 0, 0, 0.3), 0 2px 8px rgba(255, 255, 255, 0.05);
  transition: 1s ease-in;
}
.card1 {
  background-color: rgba(255, 255, 255, 0.07);
  border-radius: 10px;
  box-shadow: 0 4px 20px rgba(0, 0, 0, 0.3), 0 2px 8px rgba(255, 255, 255, 0.05);
  transition: 1s ease-in;
}
.card p i:hover {
  color: #f69916;
}

.mood {
  /* border: 7px solid #ecebea; */
  padding: 20px;
  background-color: rgba(0, 0, 0, 0.07);
  border-radius: 10px;
  box-shadow: 0 4px 10px rgba(225, 225, 225, 0.3),
    0 2px 4px rgba(255, 255, 255, 0.05);
}
.card:hover {
  padding: 40px;
  background-color: rgba(0, 0, 0, 0.07);
  border-radius: 10px;
  box-shadow: 0 4px 10px rgba(225, 225, 225, 0.3),
    0 2px 4px rgba(255, 255, 255, 0.05);
}
.card1:hover {
  background-color: rgba(0, 0, 0, 0.07);
  border-radius: 10px;
  box-shadow: 0 4px 10px rgba(225, 225, 225, 0.3),
    0 2px 4px rgba(255, 255, 255, 0.05);
}
.card h3 {
  font-size: 27px;
  font-weight: 600;
}
.card h2 {
  font-size: 28px;
  font-weight: 500;
}
/* the style for individual project */

.lists {
  border-left: 2px solid #ff9602;
  padding-left: 20px;
  margin-top: 10px;
}
/* the style for individual project */

.rand1 i {
  background-color: #ff9602;
  padding: 6px;
  border-radius: 50%;
}
form {
  /* flex-wrap: wrap; */
  display: block;
}
label {
  margin-top: 4px;
}
input,
textarea,
select {
  border: 2px solid #ff9602;
}
option {
  color: #191717;
}
.skill-bar {
  height: 10px;
  background-color: #ff9602;
  transition: width 1s;
  border-radius: 30px;
}
.whatido {
  display: grid;
  grid-template-columns: 3fr 3fr 3fr;
  gap: 20px;
}
@media (max-width: 768px) {
  /* body{
        padding-left: 10px;
        padding-right: 10px;
    } */
  .whatido {
    display: block;
    margin-top: 20px;
  }
  .icon_2 i {
    display: none;
  }
}

